--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <button id="prevQuote" class="theme-switch nav-side-btn nav-absolute nav-left">Previous</button>
+    <button id="prevQuote" class="theme-switch nav-side-btn nav-absolute nav-left" aria-label="Previous Quote">Previous</button>
     <div class="container">
         <div style="margin-bottom:0.5rem;color:#64748b;font-size:0.98rem;text-align:center;">
             Quotifyyyy is your daily source of inspiration. Browse and save your favorite motivational quotes!
@@ -18,15 +18,13 @@
                 <p id="quote">"The best way to get started is to quit talking and begin doing."</p>
                 <span id="author">- Walt Disney</span>
             </div>
-            <div style="margin-top:1rem;">
-                <button id="prevQuote" class="theme-switch" style="margin-right:0.5rem;">Previous</button>
-                <button id="nextQuote" class="theme-switch nav-side-btn nav-absolute nav-right">Next</button>
-                <button id="readAloudBtn" class="theme-switch" style="margin-left:0.5rem;">Read Aloud</button>
-                <button id="favoriteBtn" class="theme-switch" style="margin-left:0.5rem;">Favorite</button>
-                <button id="copyBtn" class="theme-switch" style="margin-left:0.5rem;">Copy</button>
-                <button id="twitterBtn" class="theme-switch" style="margin-left:0.5rem;">Share on Twitter</button>
-                <button id="instagramBtn" class="theme-switch" style="margin-left:0.5rem;">Share on Instagram Story</button>
-                <button id="generateImageBtn" class="theme-switch" style="margin-left:0.5rem;">Generate Image</button>
+            <div style="margin-top:1rem; display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
+                <button id="readAloudBtn" class="theme-switch" style="min-width:110px;">Read Aloud</button>
+                <button id="favoriteBtn" class="theme-switch" style="min-width:110px;">Favorite</button>
+                <button id="copyBtn" class="theme-switch" style="min-width:110px;">Copy</button>
+                <button id="twitterBtn" class="theme-switch" style="min-width:110px;">Share on Twitter</button>
+                <button id="instagramBtn" class="theme-switch" style="min-width:170px;">Share on Instagram Story</button>
+                <button id="generateImageBtn" class="theme-switch" style="min-width:150px;">Generate Image</button>
             </div>
             <div style="margin-top:0.5rem;">
                 <label style="cursor:pointer;"><input type="checkbox" id="showFavoritesToggle" style="margin-right:0.5rem;">Show Favorites Only</label>
@@ -48,7 +46,7 @@
             <div id="feedbackMsg" style="color:#22c55e;display:none;margin-top:0.5rem;">Thank you for your feedback!</div>
         </form>
     </div>
-    <button id="nextQuote" class="theme-switch nav-side-btn nav-absolute nav-right">Next</button>
+    <button id="nextQuote" class="theme-switch nav-side-btn nav-absolute nav-right" aria-label="Next Quote">Next</button>
     <script>
         let quotes = JSON.parse(localStorage.getItem('quotes')) || [
             { text: "The best way to get started is to quit talking and begin doing.", author: "Walt Disney" },
