Add floating action buttons and Font Awesome
Introduced two floating action buttons for add and login actions, and included Font Awesome for icon support. Enhances UI interactivity and visual appeal.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quotifyyyy</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
+    <button id="fabBtn" class="fab" title="Add" style="display:none;">+</button>
     <button id="prevQuote" aria-label="Previous Quote">&#8592;</button>
+    <button id="loginFabBtn" class="fab login-fab" title="Login"><i class="fas fa-sign-in-alt"></i></button>
     <div class="container">
         <div style="margin-bottom:0.5rem;color:#64748b;font-size:0.98rem;text-align:center;">
             Quotifyyyy is your daily source of inspiration. Browse and save your favorite motivational quotes!
