Redirect to admin page on successful login
Replaces the success alert and modal close with a redirect to admin.html after a successful admin login.

--- a/index.html
+++ b/index.html
@@ -373,8 +373,7 @@
                 alert('Incorrect admin password!');
                 return;
             }
-            alert('Admin login successful!');
-            document.getElementById('loginOptionsModal').style.display = 'none';
+            window.location.href = 'admin.html';
         });
     </script>
 </body>
