Fix quote addition to use latest localStorage data
Updated the add quote form handler to always fetch the latest quotes from localStorage before adding a new quote, ensuring no data is overwritten. Removed the call to saveQuotes() and now directly updates localStorage.

--- a/admin.html
+++ b/admin.html
@@ -124,10 +124,18 @@
 
         addQuoteForm.addEventListener('submit', function(e) {
             e.preventDefault();
-            quotes.push({ text: newQuoteText.value, author: newQuoteAuthor.value });
+            // Always fetch the latest quotes from localStorage before adding
+            let currentQuotes = JSON.parse(localStorage.getItem('quotes')) || [
+                { text: "The best way to get started is to quit talking and begin doing.", author: "Walt Disney" },
+                { text: "Success is not the key to happiness. Happiness is the key to success.", author: "Albert Schweitzer" },
+                { text: "Your time is limited, so don't waste it living someone else's life.", author: "Steve Jobs" },
+                { text: "The only place where success comes before work is in the dictionary.", author: "Vidal Sassoon" },
+                { text: "Don't watch the clock; do what it does. Keep going.", author: "Sam Levenson" }
+            ];
+            currentQuotes.push({ text: newQuoteText.value, author: newQuoteAuthor.value });
+            localStorage.setItem('quotes', JSON.stringify(currentQuotes));
             newQuoteText.value = '';
             newQuoteAuthor.value = '';
-            saveQuotes();
             renderQuotesList();
         });
 
