--- a/admin.html
+++ b/admin.html
@@ -65,6 +65,7 @@
 <body>
     <div id="adminPanel" class="admin-panel">
         <a href="index.html" class="theme-switch" style="display:block;margin:0 auto 1rem auto;width:max-content;text-align:center;">Home</a>
+        <button id="themeSwitch" class="theme-switch" style="margin-bottom:1.5rem;">Switch Theme</button>
         <h2>Admin Panel</h2>
         <form id="addQuoteForm">
             <input type="text" id="newQuoteText" placeholder="Quote text" required>
@@ -82,6 +83,20 @@
         <ul id="feedbackList"></ul>
     </div>
     <script>
+        // Theme switch logic (same as index.html)
+        const themeSwitch = document.getElementById('themeSwitch');
+        themeSwitch.addEventListener('click', () => {
+            document.body.classList.toggle('dark-theme');
+            if(document.body.classList.contains('dark-theme')) {
+                localStorage.setItem('theme', 'dark');
+            } else {
+                localStorage.setItem('theme', 'light');
+            }
+        });
+        // On load, check for saved theme
+        if(localStorage.getItem('theme') === 'dark') {
+            document.body.classList.add('dark-theme');
+        }
         // Use localStorage to persist quotes between sessions
         let quotes = JSON.parse(localStorage.getItem('quotes')) || [
             { text: "The best way to get started is to quit talking and begin doing.", author: "Walt Disney" },
