--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         </div>
     </div>
     <script>
+        // Use localStorage to persist quotes between sessions
         let quotes = JSON.parse(localStorage.getItem('quotes')) || [
             { text: "The best way to get started is to quit talking and begin doing.", author: "Walt Disney" },
             { text: "Success is not the key to happiness. Happiness is the key to success.", author: "Albert Schweitzer" },
@@ -118,16 +119,44 @@
         showQuote(currentIndex);
 
         document.getElementById('nextQuote').addEventListener('click', function() {
-            if (quotes.length > 0) {
-                currentIndex = (currentIndex + 1) % quotes.length;
+            if (filteredQuotes.length > 0) {
+                currentIndex = (currentIndex + 1) % filteredQuotes.length;
                 showQuote(currentIndex, 'swipe-left');
             }
         });
         document.getElementById('prevQuote').addEventListener('click', function() {
-            if (quotes.length > 0) {
-                currentIndex = (currentIndex - 1 + quotes.length) % quotes.length;
+            if (filteredQuotes.length > 0) {
+                currentIndex = (currentIndex - 1 + filteredQuotes.length) % filteredQuotes.length;
                 showQuote(currentIndex, 'swipe-right');
             }
+        });
+
+        document.getElementById('showFavoritesToggle').addEventListener('change', function(e) {
+            showFavoritesOnly = e.target.checked;
+            if (showFavoritesOnly) {
+                filteredQuotes = quotes.filter(q => favorites.some(f => f.text === q.text && f.author === q.author));
+            } else {
+                filteredQuotes = [...quotes];
+            }
+            currentIndex = 0;
+            showQuote(currentIndex);
+        });
+
+        // User-submitted quotes
+        document.getElementById('submitQuoteForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const text = document.getElementById('userQuoteText').value.trim();
+            const author = document.getElementById('userQuoteAuthor').value.trim() || 'Anonymous';
+            if (!text) return;
+            let pendingQuotes = JSON.parse(localStorage.getItem('pendingQuotes')) || [];
+            pendingQuotes.push({ text, author });
+            localStorage.setItem('pendingQuotes', JSON.stringify(pendingQuotes));
+            document.getElementById('userQuoteText').value = '';
+            document.getElementById('userQuoteAuthor').value = '';
+            document.getElementById('submitQuoteMsg').style.display = 'block';
+            setTimeout(() => {
+                document.getElementById('submitQuoteMsg').style.display = 'none';
+            }, 3000);
         });
 
         // Theme switch logic
@@ -276,34 +305,6 @@
             }
             localStorage.setItem('favoriteQuotes', JSON.stringify(favorites));
             updateFavoriteBtn();
-        });
-
-        document.getElementById('showFavoritesToggle').addEventListener('change', function(e) {
-            showFavoritesOnly = e.target.checked;
-            if (showFavoritesOnly) {
-                filteredQuotes = quotes.filter(q => favorites.some(f => f.text === q.text && f.author === q.author));
-            } else {
-                filteredQuotes = [...quotes];
-            }
-            currentIndex = 0;
-            showQuote(currentIndex);
-        });
-
-        // User-submitted quotes
-        document.getElementById('submitQuoteForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            const text = document.getElementById('userQuoteText').value.trim();
-            const author = document.getElementById('userQuoteAuthor').value.trim() || 'Anonymous';
-            if (!text) return;
-            let pendingQuotes = JSON.parse(localStorage.getItem('pendingQuotes')) || [];
-            pendingQuotes.push({ text, author });
-            localStorage.setItem('pendingQuotes', JSON.stringify(pendingQuotes));
-            document.getElementById('userQuoteText').value = '';
-            document.getElementById('userQuoteAuthor').value = '';
-            document.getElementById('submitQuoteMsg').style.display = 'block';
-            setTimeout(() => {
-                document.getElementById('submitQuoteMsg').style.display = 'none';
-            }, 3000);
         });
 
         // User feedback
