--- a/admin.html
+++ b/admin.html
@@ -72,7 +72,7 @@
             <input type="text" id="newQuoteAuthor" placeholder="Author" required>
             <button type="submit">Add Quote</button>
         </form>
-        <ul id="quotesList"></ul>
+        <ul id="quotesList" style="max-height:320px;overflow-y:auto;"></ul>
     </div>
     <div id="moderationPanel" class="admin-panel" style="margin-top: 2rem;">
         <h2>Moderate User-Submitted Quotes</h2>
